reorganized components + added some styling and made logo

--- a/src/styles/_SearchResults.css
+++ b/src/styles/_SearchResults.css
@@ -1,7 +1,8 @@
-header{
+
+
+#search {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 50px;
 }
