--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -1,11 +1,11 @@
 body{
-background-color: #E85D5A;
+background-color: #FBF7ED;
 font-family: var(--font-content)
 }
 
 h1{
     font-family: var(--font-title);
-    color: #76FBE3;
+    color: #008060;
     font-size: 5rem;
     font-weight: bold;
 
@@ -19,4 +19,18 @@ h2{
 h3{
     font-family: var(--font-content);
     font-size: 2rem;
+}
+
+input{
+    padding: .5rem;
+    font-size: 1.8rem;
+}
+
+.logo-the{
+    font-size: 2.5rem;
+    margin-bottom: -1.5rem;
+}
+
+.logo-shoppies{
+    margin-top: -1rem;
 }
