--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,4 +1,5 @@
 :root{
     --font-title: 'Playfair Display', serif;
     --font-content: 'Roboto', sans-serif;
+    --box-shadow-main: 5px 2px 9px 0px rgba(0, 0, 0, 0.25);
 }
