--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -34,3 +34,10 @@ input{
 .logo-shoppies{
     margin-top: -1rem;
 }
+
+.section-title{
+    background-color: var(--color-green);
+    color: var(--color-tan);
+    text-align: center;
+    padding: 5px;
+}
