--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -2,4 +2,6 @@
     --font-title: 'Playfair Display', serif;
     --font-content: 'Roboto', sans-serif;
     --box-shadow-main: 5px 2px 9px 0px rgba(0, 0, 0, 0.25);
+    --color-green: #008060;
+    --color-tan: #FBF7ED;
 }
