access to api using axios with private key

--- a/src/styles/_SearchResults.css
+++ b/src/styles/_SearchResults.css
@@ -20,5 +20,14 @@
 .search-area input{
     width: 90%;
     max-width: 400px;
+    
+}
+
+.search-area input:focus{
+   
+}
+
+.search-area input::before{
+   content: "&#x1F50E"
 }
 
